// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number Box block edit matches snapshots 1`] = `
<Fragment>
  <InspectorControls>
    <PanelBody>
      <SelectControl
        label="Column Number"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "One Column",
              "value": "1",
            },
            Object {
              "label": "Two Column",
              "value": "2",
            },
            Object {
              "label": "Three Column",
              "value": "3",
            },
          ]
        }
        value="1"
      />
    </PanelBody>
    <PanelColorSettings
      colorSettings={
        Array [
          Object {
            "label": "Number Color",
            "onChange": [Function],
            "value": "#444444",
          },
          Object {
            "label": "Number Background Color",
            "onChange": [Function],
            "value": "#dddddd",
          },
          Object {
            "label": "Name Color",
            "onChange": [Function],
            "value": "#444444",
          },
          Object {
            "label": "Body Text Color",
            "onChange": [Function],
            "value": "#444444",
          },
        ]
      }
      title="Color Settings"
    />
  </InspectorControls>
  <div
    className="ugb-number-box column-1"
  >
    <div>
      <RichText
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder={undefined}
        style={
          Object {
            "backgroundColor": "#dddddd",
            "color": "#444444",
          }
        }
        tagName="span"
        value="01"
      />
      <RichText
        className="ugb-number-box-name"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add name…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="h4"
        value="Registration"
      />
      <RichText
        className="ugb-number-box-body"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add body…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="p"
        value="This is just a sample write-up, but you can check out more info on Gutenberg on the WP repository."
      />
    </div>
    <div>
      <RichText
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder=""
        style={
          Object {
            "backgroundColor": "#dddddd",
            "color": "#444444",
          }
        }
        tagName="span"
        value={undefined}
      />
      <RichText
        className="ugb-number-box-name-two"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add name…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="h4"
        value={undefined}
      />
      <RichText
        className="ugb-number-box-body-two"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add body…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="p"
        value={undefined}
      />
    </div>
    <div>
      <RichText
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder=""
        style={
          Object {
            "backgroundColor": "#dddddd",
            "color": "#444444",
          }
        }
        tagName="span"
        value={undefined}
      />
      <RichText
        className="ugb-number-box-name-three"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add name…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="h4"
        value={undefined}
      />
      <RichText
        className="ugb-number-box-body-three"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add body…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="p"
        value={undefined}
      />
    </div>
  </div>
</Fragment>
`;

exports[`Number Box block edit matches snapshots 2`] = `
<Fragment>
  <InspectorControls>
    <PanelBody>
      <SelectControl
        label="Column Number"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "One Column",
              "value": "1",
            },
            Object {
              "label": "Two Column",
              "value": "2",
            },
            Object {
              "label": "Three Column",
              "value": "3",
            },
          ]
        }
        value="2"
      />
    </PanelBody>
    <PanelColorSettings
      colorSettings={
        Array [
          Object {
            "label": "Number Color",
            "onChange": [Function],
            "value": "#444444",
          },
          Object {
            "label": "Number Background Color",
            "onChange": [Function],
            "value": "#dddddd",
          },
          Object {
            "label": "Name Color",
            "onChange": [Function],
            "value": "#444444",
          },
          Object {
            "label": "Body Text Color",
            "onChange": [Function],
            "value": "#444444",
          },
        ]
      }
      title="Color Settings"
    />
  </InspectorControls>
  <div
    className="ugb-number-box column-2"
  >
    <div>
      <RichText
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder={undefined}
        style={
          Object {
            "backgroundColor": "#dddddd",
            "color": "#444444",
          }
        }
        tagName="span"
        value="01"
      />
      <RichText
        className="ugb-number-box-name"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add name…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="h4"
        value="Registration"
      />
      <RichText
        className="ugb-number-box-body"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add body…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="p"
        value="This is just a sample write-up, but you can check out more info on Gutenberg on the WP repository."
      />
    </div>
    <div>
      <RichText
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder={undefined}
        style={
          Object {
            "backgroundColor": "#dddddd",
            "color": "#444444",
          }
        }
        tagName="span"
        value="02"
      />
      <RichText
        className="ugb-number-box-name-two"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add name…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="h4"
        value="Waiting Period"
      />
      <RichText
        className="ugb-number-box-body-two"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add body…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="p"
        value="This is just a sample write-up, but you can check out more info on Gutenberg on the WP repository."
      />
    </div>
    <div>
      <RichText
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder=""
        style={
          Object {
            "backgroundColor": "#dddddd",
            "color": "#444444",
          }
        }
        tagName="span"
        value={undefined}
      />
      <RichText
        className="ugb-number-box-name-three"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add name…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="h4"
        value={undefined}
      />
      <RichText
        className="ugb-number-box-body-three"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add body…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="p"
        value={undefined}
      />
    </div>
  </div>
</Fragment>
`;

exports[`Number Box block edit matches snapshots 3`] = `
<Fragment>
  <InspectorControls>
    <PanelBody>
      <SelectControl
        label="Column Number"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "One Column",
              "value": "1",
            },
            Object {
              "label": "Two Column",
              "value": "2",
            },
            Object {
              "label": "Three Column",
              "value": "3",
            },
          ]
        }
        value="3"
      />
    </PanelBody>
    <PanelColorSettings
      colorSettings={
        Array [
          Object {
            "label": "Number Color",
            "onChange": [Function],
            "value": "#444444",
          },
          Object {
            "label": "Number Background Color",
            "onChange": [Function],
            "value": "#dddddd",
          },
          Object {
            "label": "Name Color",
            "onChange": [Function],
            "value": "#444444",
          },
          Object {
            "label": "Body Text Color",
            "onChange": [Function],
            "value": "#444444",
          },
        ]
      }
      title="Color Settings"
    />
  </InspectorControls>
  <div
    className="ugb-number-box column-3"
  >
    <div>
      <RichText
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder={undefined}
        style={
          Object {
            "backgroundColor": "#dddddd",
            "color": "#444444",
          }
        }
        tagName="span"
        value="01"
      />
      <RichText
        className="ugb-number-box-name"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add name…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="h4"
        value="Registration"
      />
      <RichText
        className="ugb-number-box-body"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add body…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="p"
        value="This is just a sample write-up, but you can check out more info on Gutenberg on the WP repository."
      />
    </div>
    <div>
      <RichText
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder={undefined}
        style={
          Object {
            "backgroundColor": "#dddddd",
            "color": "#444444",
          }
        }
        tagName="span"
        value="02"
      />
      <RichText
        className="ugb-number-box-name-two"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add name…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="h4"
        value="Waiting Period"
      />
      <RichText
        className="ugb-number-box-body-two"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add body…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="p"
        value="This is just a sample write-up, but you can check out more info on Gutenberg on the WP repository."
      />
    </div>
    <div>
      <RichText
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder={undefined}
        style={
          Object {
            "backgroundColor": "#dddddd",
            "color": "#444444",
          }
        }
        tagName="span"
        value="03"
      />
      <RichText
        className="ugb-number-box-name-three"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add name…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="h4"
        value="Delivery"
      />
      <RichText
        className="ugb-number-box-body-three"
        keepPlaceholderOnFocus={true}
        onChange={[Function]}
        placeholder="Add body…"
        style={
          Object {
            "color": "#444444",
          }
        }
        tagName="p"
        value="This is just a sample write-up, but you can check out more info on Gutenberg on the WP repository."
      />
    </div>
  </div>
</Fragment>
`;

exports[`Number Box block save matches snapshots 1`] = `
<div
  className="ugb-number-box column-1"
>
  <div
    className="ugb-number-box-column-one"
  />
</div>
`;

exports[`Number Box block save matches snapshots 2`] = `
<div
  className="ugb-number-box column-2"
>
  <div
    className="ugb-number-box-column-one"
  />
  <div
    className="ugb-number-box-column-two"
  />
</div>
`;

exports[`Number Box block save matches snapshots 3`] = `
<div
  className="ugb-number-box column-3"
>
  <div
    className="ugb-number-box-column-one"
  />
  <div
    className="ugb-number-box-column-two"
  />
  <div
    className="ugb-number-box-column-three"
  />
</div>
`;
